--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   update-readme:
-    if: github.event.head_commit.message != 'Update README with images [skip-readme-update]'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -18,6 +17,8 @@ jobs:
           python generate_readme.py
 
       - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
