--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -5,20 +5,24 @@ on:
     branches:
       - main
 
+# Add this permissions block
+permissions:
+  contents: write
+
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4 # Update to v4 from v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }} # Explicitly set the token
 
       - name: Generate README with images
         run: |
           python generate_readme.py
 
       - name: Commit and push changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
