--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - main
 
-# Add this permissions block
 permissions:
   contents: write
 
@@ -14,9 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4 # Update to v4 from v2
+        uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }} # Explicitly set the token
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
 
       - name: Generate README with images
         run: |
@@ -26,6 +30,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git commit -m "Update README with images [skip-readme-update]" || exit 0
+          git add .
+          git commit -m "Update content [skip-readme-update]" || exit 0
           git push
